--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ezra Schott - Portfolio</title>
+    <title>Ezra Schott - Work</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
