--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ezra Schott - Contact</title>
+    <title>Contact Ezra Schott</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
