Adding logo image

--- a/contact.html
+++ b/contact.html
@@ -41,16 +41,15 @@
     <div>
         <!-- placeholder info throughout-->
         <h2>Ezra Schott</h2>
-        <p>123 Placeholder St</p>
-        <p>Berkeley California</p>
+        <p>1833 Parker St.</p>
+        <p>Berkeley, California</p>
         <p>United States</p>
         <br>
-        <!-- placeholder phone number and skype-->
-        Tel: <a href="tel:123 546 7890">(123) 546 7890</a><br>
-        Skype: <a href="skype:hello.placeholder"> placeholder skype</a>
-        <br>
-        Email: <a href="mailto:placeholder@gmail.com">placeholder@gmail.com</a> <br>
-        <a href="placeholder@gmail.com">Contact me</a>
+        Tel: <a href="tel:510 809 6291">(510) 809 6291</a><br>
+       <!-- commenting out skype because I don't use Skype much and neither do a lot of people Skype: <a href="skype:hello.placeholder"> placeholder skype</a>
+        <br> --> 
+        Email: <a href="mailto:ezraschott@gmail.com">ezraschott@gmail.com</a> <br>
+        <a href="ezraschott@gmail.com">Contact me</a>
     </div>
     <div>
         <form action="" method="post" id="contact-form">
