--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <header class="page-header">
 
-        <img src="https://placehold.co/200x70" alt="logo" class="page-header__item">
+        <img src="img/name-logo.png" alt="logo" class="page-header__item"
+        width="255"
+        height="44" >
         <nav class="page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -48,8 +50,8 @@
     <footer class="page-footer">
         <p>Find me on</p>
         <div>
-            <img src="img/github_icon.svg" alt="Github">
-            <img src="img/twitter_icon.svg" alt="Twitter">
+            <a href="https://github.com/ArthurShelter" alt=""><img src="img/github_icon.svg" alt="Github"></a>
+            <!-- commenting out twitter link <img src="img/twitter_icon.svg" alt="Twitter"> -->
             <img src="img/linkedin_icon.svg" alt="Linkedin">
         </div>
     </footer>
@@ -57,9 +59,8 @@
     <div>
         <a href="#">Back to top</a>
     </div>
-
-    <script src="js/tota11y.min.js"></script>
-
+    <!-- commenting out tota11y <script src="js/tota11y.min.js"></script>-->
+    <!--test buttons
     <div>
         <a href="#">Default Link</a> <br>
         <button type="button">Default Button</button>
@@ -68,7 +69,7 @@
     <div>
         <button class="button__secondary">Secondary Button</button>
     </div>
-
+-->
 
 </body>
 
