Replacing placeholder logo with real logo in About

--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
 <body>
     <header class="page-header">
 
-        <img src="https://placehold.co/200x70" alt="" class="page-header__item">
+        <img src="img/name-logo.png" alt="logo" class="page-header__item"
+        width="255"
+        height="44" >
         <nav class="page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
