--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     </div>
 </div>
     
-    <script src="js/tota11y.min.js"></script>
+    <!--<script src="js/tota11y.min.js"></script>-->
 </body>
 
 </html>
