Commenting out Twitter link and adding Github link

--- a/work.html
+++ b/work.html
@@ -89,8 +89,8 @@
     <footer class="page-footer">
         <p>Find me on</p>
         <div>
-            <img src="img/github_icon.svg" alt="Github">
-            <img src="img/twitter_icon.svg" alt="Twitter">
+            <a href="https://github.com/ArthurShelter" alt=""><img src="img/github_icon.svg" alt="Github"></a>
+            <!-- commenting out twitter link <img src="img/twitter_icon.svg" alt="Twitter"> -->
             <img src="img/linkedin_icon.svg" alt="Linkedin">
         </div>
     </footer>
