--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <div class="profile">
-        <img src="https://placehold.co/150x150" alt="" class="profile__portrait">
+        <img src="img/self-portrait.png" alt="self-portrait" class="profile__portrait">
         <h1>Hello world!</h1>
         <h2>
             <p>My name is Ezra Schott.</p>
@@ -50,7 +50,7 @@
     <footer class="page-footer">
         <p>Find me on</p>
         <div>
-            <a href="https://github.com/ArthurShelter" alt=""><img src="img/github_icon.svg" alt="Github"></a>
+            <a href="https://github.com/ArthurShelter"><img src="img/github_icon.svg" alt="Github"></a>
             <!-- commenting out twitter link <img src="img/twitter_icon.svg" alt="Twitter"> -->
             <img src="img/linkedin_icon.svg" alt="Linkedin">
         </div>
