Adding lang="en" tags to pages
The pages are index, about, contact, and work.

--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -16,9 +16,7 @@
 <body>
     <header class="page-header">
 
-        <img src="img/name-logo.png" alt="logo" class="page-header__item"
-        width="255"
-        height="44" >
+        <img src="img/name-logo.png" alt="logo" class="page-header__item" width="255" height="44">
         <nav class="page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
