--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="img/self-portrait.png" alt="self-portrait" class="profile__portrait">
         <h1>Hello world!</h1>
         <h2>
-            <p>My name is Ezra Schott.</p>
+            My name is Ezra Schott.
             <p>I am a <span>web</span> developer from the United States.</p>
             <a href="#">Check out some of my code</a>
         </h2>
