Replace <p> tag with <h2>

--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
         <h1>Hello world!</h1>
         <h2>
             My name is Ezra Schott.
-            <p>I am a <span>web</span> developer from the United States.</p>
-            <a href="#">Check out some of my code</a>
         </h2>
+        <h2>
+            I am a <span>web</span> developer from the United States.
+        </h2>
+            <a href="#">Check out some of my code</a>
+        
     </div>
     <footer class="page-footer">
         <p>Find me on</p>
