--- a/work.html
+++ b/work.html
@@ -87,7 +87,7 @@
     <footer class="page-footer">
         <p>Find me on</p>
         <div>
-            <a href="https://github.com/ArthurShelter" alt=""><img src="img/github_icon.svg" alt="Github"></a>
+            <a href="https://github.com/ArthurShelter"><img src="img/github_icon.svg" alt="Github"></a>
             <!-- commenting out twitter link <img src="img/twitter_icon.svg" alt="Twitter"> -->
             <img src="img/linkedin_icon.svg" alt="Linkedin">
         </div>
