Remove spaces in tel number

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <p>Berkeley, California</p>
         <p>United States</p>
         <br>
-        Tel: <a href="tel:510 809 6291">(510) 809 6291</a><br>
+        Tel: <a href="tel:5108096291">(510) 809 6291</a><br>
        <!-- commenting out skype because I don't use Skype much and neither do a lot of people Skype: <a href="skype:hello.placeholder"> placeholder skype</a>
         <br> --> 
         Email: <a href="mailto:ezraschott@gmail.com">ezraschott@gmail.com</a> <br>
