--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <a href="ezraschott@gmail.com">Contact me</a>
     </div>
     <div>
-        <form action="" method="post" id="contact-form">
+        <form action="#" method="post" id="contact-form">
             <label class="standard-label" for="contact-email">Email: </label>
             <input type="email" id="contact-email" required><br>
             <label class="standard-label" for="contact-tel">Telephone: </label>
