Deleting greeting for now

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             My name is Ezra Schott.
         </h2>
         <h2>
-            I am a <span>web</span> developer from the United States. Nice of you to drop by!
+            I am a <span>web</span> developer from the United States.
         </h2>
             <a href="#">Check out some of my code</a>
         
