--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
     <div>
         <!-- placeholder info throughout-->
         <h2>Ezra Schott</h2>
-        <p>1833 Parker St.</p>
+        <p>Address Redacted</p>
         <p>Berkeley, California</p>
         <p>United States</p>
         <br>
-        Tel: <a href="tel:5108096291">(510) 809 6291</a><br>
+        Tel: <a href="tel:#">(123) 456 7890</a><br>
        <!-- commenting out skype because I don't use Skype much and neither do a lot of people Skype: <a href="skype:hello.placeholder"> placeholder skype</a>
         <br> --> 
         Email: <a href="mailto:ezraschott@gmail.com">ezraschott@gmail.com</a> <br>
