--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
         Tel: <a href="tel:#">(123) 456 7890</a><br>
        <!-- commenting out skype because I don't use Skype much and neither do a lot of people Skype: <a href="skype:hello.placeholder"> placeholder skype</a>
         <br> --> 
-        Email: <a href="mailto:ezraschott@gmail.com">ezraschott@gmail.com</a> <br>
-        <a href="ezraschott@gmail.com">Contact me</a>
+        Email: <a href="mailto:#@gmail.com">email redacted</a> <br>
+        <a href="#@gmail.com">Contact me</a>
     </div>
     <div>
         <form action="#" method="post" id="contact-form">
